--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="40dp"
     tools:context=".LoginActivity">
 
     <TextView
@@ -57,10 +58,10 @@
 
     <EditText
         android:id="@+id/editText1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#FFC107"
-        android:text="Enter Username"
+        android:hint="Enter Username"
         android:background="#3F51B5"
         android:textSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
@@ -72,10 +73,10 @@
 
     <EditText
         android:id="@+id/editText2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:text="Enter Password"
+        android:hint="Enter Password"
         android:textSize="30dp"
         android:textColor="#FFC107"
         android:background="#3F51B5"
