--- a/app/src/main/res/layout/trip.xml
+++ b/app/src/main/res/layout/trip.xml
@@ -13,13 +13,18 @@
         android:layout_margin="2dp"
         android:padding="4dp">
 
-        <ImageView
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/picture"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="2dp"
-            android:padding="2dp" />
+            android:padding="2dp"
+            android:src="@drawable/download"
+            app:civ_border_width="0dp"
+            />
 
         <TextView
             android:layout_width="wrap_content"
