--- a/app/src/main/res/layout/activity_upcoming_trips.xml
+++ b/app/src/main/res/layout/activity_upcoming_trips.xml
@@ -5,9 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UpcomingTrips">
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/new_trips"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp" />
 
 </RelativeLayout>
