--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -23,7 +23,7 @@
             android:layout_marginEnd="2dp"
             android:padding="2dp"
             android:src="@drawable/download"
-            app:civ_border_width="0dp"
+            app:civ_border_width="1dp"
             />
 
         <TextView
@@ -33,7 +33,9 @@
             android:layout_below="@+id/sender_reciever"
             android:layout_marginStart="2dp"
             android:layout_marginTop="2dp"
+            android:layout_marginEnd="2dp"
             android:layout_marginBottom="2dp"
+            android:layout_toStartOf="@+id/button_reply"
             android:layout_toEndOf="@+id/picture"
             android:text="message" />
 
@@ -43,17 +45,32 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
             android:layout_marginTop="2dp"
+            android:layout_marginEnd="2dp"
             android:layout_marginBottom="2dp"
+            android:layout_toStartOf="@+id/button_reply"
             android:layout_toEndOf="@+id/picture"
             android:text="path" />
 
         <Button
+            android:id="@+id/button_reply"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_margin="2dp"
             android:layout_marginEnd="2dp"
             android:text="Reply" />
+
+        <TextView
+            android:id="@+id/message_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginBottom="2dp"
+            android:layout_below="@+id/button_reply"
+            android:text="path" />
 
 
     </RelativeLayout>
