--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -93,10 +93,10 @@
         app:layout_constraintTop_toTopOf="@+id/nav_host_fragment" />
 
     <Button
-        android:id="@+id/maps"
+        android:id="@+id/developerspage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Photo"
+        android:text="Deveplopers Page"
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.764"
